Add first version of documentation for exact algorithm of finding minimal extension

--- a/documentation/Report/main.tex
+++ b/documentation/Report/main.tex
@@ -266,6 +266,750 @@ W kontekście tego algorytmu aproksymacyjnego nie rozważano formalnego dowodu p
 
 % ---------------- MINIMALNE ROZSZERZENIE MULTIGRAFU ---------------- %
 
+\pagebreak
+
+% ---------------- MINIMALNE ROZSZERZENIE ZAWIERAJĄCE M KOPII ---------------- %
+\section{Minimalne rozszerzenie multigrafu zawierającego m kopii podgrafu P}
+\label{sec:minimalne_rozszerzenie_m_kopii}
+
+\subsection{Motywacja i sformułowanie problemu}
+\label{subsec:motywacja_m_kopii}
+
+W poprzednich sekcjach zajmowaliśmy się problemem weryfikacji istnienia pojedynczego podgrafu izomorficznego z danym wzorcem. W praktycznych zastosowaniach często pojawia się jednak bardziej ogólne zagadnienie: jak minimalnie rozszerzyć graf $G$, aby zawierał on $m$ rozłącznych kopii grafu wzorcowego $P$?
+
+Problem ten ma istotne zastosowania w dziedzinach takich jak:
+\begin{itemize}
+    \item \textbf{Projektowanie sieci}: Zapewnienie redundancji przez istnienie wielu izomorficznych podsieci
+    \item \textbf{Analiza struktur molekularnych}: Identyfikacja powtarzających się motywów strukturalnych
+    \item \textbf{Analiza sieci społecznych}: Wykrywanie grup o podobnej strukturze relacji
+    \item \textbf{Optymalizacja grafów}: Minimalne modyfikacje zachowujące pożądane właściwości strukturalne
+\end{itemize}
+
+\noindent\textbf{Formalne sformułowanie problemu:}
+
+\noindent\textit{Dane:}
+\begin{itemize}
+    \item Multigraf skierowany $G = (V_G, E_G)$ o $n$ wierzchołkach (graf "duży")
+    \item Multigraf skierowany $P = (V_P, E_P)$ o $k$ wierzchołkach, gdzie $k \leq n$ (graf "mały", wzorzec)
+    \item Liczba naturalna $m \geq 1$ - wymagana liczba kopii
+\end{itemize}
+
+\noindent\textit{Zadanie:}
+\begin{itemize}
+    \item Znaleźć minimalny zbiór krawędzi $E_{add}$ taki, że graf $G' = (V_G, E_G \cup E_{add})$ zawiera co najmniej $m$ rozłącznych wierzchołkowo podgrafów izomorficznych z $P$
+\end{itemize}
+
+\subsection{Definicje formalne}
+\label{subsec:definicje_m_kopii}
+
+\begin{definition}[Rozszerzenie multigrafu]
+\label{def:rozszerzenie}
+Niech $G = (V_G, E_G)$ i $G' = (V_{G'}, E_{G'})$ będą multigrafami. Mówimy, że $G'$ jest \textbf{rozszerzeniem} $G$, jeśli:
+\begin{enumerate}
+    \item $V_G \subseteq V_{G'}$ (zbiór wierzchołków $G$ jest podzbiorem wierzchołków $G'$)
+    \item $E_G \subseteq E_{G'}$ (zbiór krawędzi $G$ jest podzbiorem krawędzi $G'$)
+\end{enumerate}
+\end{definition}
+
+\noindent\textbf{Uzasadnienie:} Definicja jest naturalna i oparta na relacji inkluzji zbiorów. Zgodna z intuicją, że rozszerzenie grafu polega na dodaniu nowych wierzchołków i/lub krawędzi przy zachowaniu struktury oryginalnego grafu. Jest spójna z definicją podgrafu ($G$ jest podgrafem $G'$).
+
+\begin{definition}[Koszt rozszerzenia]
+\label{def:koszt_rozszerzenia}
+Niech $G = (V_G, E_G)$ i $G' = (V_{G'}, E_{G'})$ będą multigrafami takimi, że $G'$ jest rozszerzeniem $G$. \textbf{Kosztem rozszerzenia} $\gamma(G, G')$ nazywamy parę liczb naturalnych:
+\[
+\gamma(G, G') = (|V_{G'} \setminus V_G|, |E_{G'} \setminus E_G|)
+\]
+gdzie:
+\begin{itemize}
+    \item $|V_{G'} \setminus V_G|$ to liczba dodanych wierzchołków
+    \item $|E_{G'} \setminus E_G|$ to liczba dodanych krawędzi
+\end{itemize}
+\end{definition}
+
+\noindent\textbf{Uzasadnienie:} Koszt uwzględnia dwie podstawowe operacje rozszerzania grafu. W kontekście naszego algorytmu skupiamy się głównie na dodawaniu krawędzi, zakładając stałą liczbę wierzchołków ($V_G = V_{G'}$).
+
+\begin{definition}[Porządek leksykograficzny na kosztach]
+\label{def:porzadek_kosztow}
+Dla dwóch kosztów $(v_1, e_1)$ i $(v_2, e_2)$ definiujemy porządek leksykograficzny:
+\[
+(v_1, e_1) < (v_2, e_2) \iff v_1 < v_2 \lor (v_1 = v_2 \land e_1 < e_2)
+\]
+\end{definition}
+
+\noindent\textbf{Uzasadnienie:} Porządek leksykograficzny priorytetyzuje minimalizację liczby dodanych wierzchołków, a następnie krawędzi.
+
+\begin{definition}[Osadzenie k-wierzchołkowe]
+\label{def:osadzenie_k}
+\textbf{Osadzenie k-wierzchołkowe} grafu $P$ w grafie $G$ definiujemy przez parę $(C, \pi)$, gdzie:
+\begin{enumerate}
+    \item $C \subseteq V_G$ jest \textbf{k-kombinacją} - podzbiorem wierzchołków takim, że $|C| = k = |V_P|$
+    \item $\pi: V_P \to C$ jest \textbf{k-permutacją} - bijekcją mapującą wierzchołki $P$ na wierzchołki $C$
+\end{enumerate}
+Para $(C, \pi)$ definiuje potencjalne osadzenie $P$ w $G$ poprzez podgraf indukowany przez $C$ z odpowiednim mapowaniem wierzchołków.
+\end{definition}
+
+\noindent\textbf{Uzasadnienie:} Formalizuje procedurę przeszukiwania przestrzeni możliwych osadzeń. Bezpośrednio odpowiada implementacji (kombinacje i permutacje w kodzie). Liczba możliwych osadzeń wynosi $\binom{n}{k} \times k!$.
+
+\begin{definition}[Brakujące krawędzie dla osadzenia]
+\label{def:brakujace_krawedzie}
+Niech $G = (V_G, E_G)$ i $P = (V_P, E_P)$ będą multigrafami, gdzie $|V_P| = k \leq |V_G| = n$. Niech $(C, \pi)$ będzie osadzeniem k-wierzchołkowym $P$ w $G$. \textbf{Zbiorem brakujących krawędzi} dla osadzenia $(C, \pi)$ nazywamy multizbiór:
+\[
+\Delta((C, \pi), G, P) = \{(\pi(u), \pi(v)) : u, v \in V_P\}
+\]
+z krotnościami:
+\[
+\text{mult}_\Delta(\pi(u), \pi(v)) = \max(0, A_P[u][v] - A_G[\pi(u)][\pi(v)])
+\]
+gdzie $A_P$, $A_G$ są macierzami sąsiedztwa odpowiednio grafów $P$ i $G$.
+\end{definition}
+
+\noindent\textbf{Uzasadnienie:} Umożliwia kwantyfikację odległości między potencjalnym osadzeniem a rzeczywistym izomorfizmem. Stanowi podstawę algorytmu konstrukcji minimalnego rozszerzenia. Uwzględnia krotności krawędzi (multigrafowość).
+
+\begin{definition}[Minimalne rozszerzenie zawierające m kopii podgrafu P]
+\label{def:minimalne_rozszerzenie_m}
+Niech $G = (V_G, E_G)$ i $P = (V_P, E_P)$ będą multigrafami, gdzie $|V_P| \leq |V_G|$, oraz niech $m \geq 1$ będzie liczbą naturalną. \textbf{Minimalnym rozszerzeniem} $G$ zawierającym $m$ kopii $P$ nazywamy multigraf $G' = (V_{G'}, E_{G'})$ spełniający następujące warunki:
+
+\begin{enumerate}
+    \item $G'$ jest rozszerzeniem $G$ (tj. $V_G \subseteq V_{G'}$, $E_G \subseteq E_{G'}$)
+    \item $G'$ zawiera co najmniej $m$ podgrafów parami rozłącznych wierzchołkowo, z których każdy jest izomorficzny z $P$
+    \item Koszt rozszerzenia $\gamma(G, G')$ jest minimalny w sensie porządku leksykograficznego wśród wszystkich rozszerzeń spełniających warunki 1 i 2
+\end{enumerate}
+\end{definition}
+
+\noindent\textbf{Uzasadnienie:} Wymóg rozłączności wierzchołkowej $m$ kopii zapewnia, że są to rzeczywiście odrębne podgrafy. W implementacji zakładamy $V_G = V_{G'}$ (nie dodajemy wierzchołków), więc minimalizujemy tylko liczbę dodanych krawędzi. Definicja jest operacyjna i pozwala na konstrukcję algorytmów.
+
+\subsection{Algorytm dokładny}
+\label{subsec:algorytm_dokladny_m}
+
+\subsubsection{Przegląd algorytmu}
+\label{subsubsec:przeglad_algorytmu}
+
+Algorytm oparty jest na pełnym przeszukiwaniu przestrzeni rozwiązań. Strategia polega na:
+\begin{enumerate}
+    \item Wygenerowaniu wszystkich możliwych osadzeń grafu $P$ w grafie $G$
+    \item Obliczeniu brakujących krawędzi dla każdego osadzenia
+    \item Rozważeniu wszystkich możliwych m-tuple osadzeń dla $m$ kopii
+    \item Wybraniu osadzenia minimalizującego liczbę dodanych krawędzi
+\end{enumerate}
+
+Algorytm składa się z dwóch głównych faz:
+\begin{itemize}
+    \item \textbf{Faza 1:} Generowanie osadzeń i macierzy brakujących krawędzi
+    \item \textbf{Faza 2:} Znajdowanie minimalnego rozszerzenia dla $m$ kopii
+\end{itemize}
+
+\subsubsection{Szczegółowy opis algorytmu}
+\label{subsubsec:szczegolowy_opis}
+
+\textbf{Faza 1: Generowanie osadzeń i macierzy brakujących krawędzi}
+
+\noindent\textbf{Krok 1: Generowanie k-kombinacji wierzchołków G}
+
+Dla grafu $G$ o $n$ wierzchołkach generujemy wszystkie możliwe $k$-kombinacje wierzchołków, gdzie $k = |V_P|$. Każda kombinacja $C_j \subseteq V_G$ reprezentuje potencjalny zbiór wierzchołków, na które można zmapować graf $P$.
+
+\begin{itemize}
+    \item \textit{Wejście:} $G = (V_G, E_G)$, $|V_G| = n$, $k = |V_P|$
+    \item \textit{Wyjście:} Zbiór wszystkich $k$-kombinacji $\{C_1, C_2, \ldots, C_N\}$, gdzie $N = \binom{n}{k}$
+    \item \textit{Implementacja:} Funkcja \texttt{combinationsK()} generuje kombinacje iteracyjnie w porządku leksykograficznym
+    \item \textit{Złożoność:} $O\left(\binom{n}{k} \times k\right)$
+\end{itemize}
+
+\noindent\textbf{Krok 2: Generowanie permutacji wierzchołków P}
+
+Dla grafu $P$ o $k$ wierzchołkach generujemy wszystkie możliwe permutacje. Każda permutacja $\pi_i: V_P \to V_P$ reprezentuje potencjalne uporządkowane mapowanie wierzchołków $P$ na wierzchołki kombinacji $C_j$.
+
+\begin{itemize}
+    \item \textit{Wejście:} $P = (V_P, E_P)$, $|V_P| = k$
+    \item \textit{Wyjście:} Zbiór wszystkich permutacji $\{\pi_1, \pi_2, \ldots, \pi_M\}$, gdzie $M = k!$
+    \item \textit{Implementacja:} Funkcja \texttt{permutations()} wykorzystuje algorytm Heapa
+    \item \textit{Złożoność:} $O(k! \times k)$
+\end{itemize}
+
+\noindent\textbf{Krok 3: Obliczanie brakujących krawędzi}
+
+Dla każdej pary $(C_j, \pi_i)$ obliczamy listę krawędzi, które należy dodać do $G$, aby podgraf indukowany przez $C_j$ z mapowaniem $\pi_i$ był izomorficzny z $P$.
+
+Dla każdej pary wierzchołków $(u, v) \in V_P \times V_P$:
+\begin{itemize}
+    \item Obliczamy obrazy: $u' = C_j[\pi_i(u)]$, $v' = C_j[\pi_i(v)]$
+    \item Liczba krawędzi w $P$: $e_P = A_P[\pi_i(u)][\pi_i(v)]$
+    \item Liczba krawędzi w $G$: $e_G = A_G[u'][v']$
+    \item Brakujące krawędzie: $\Delta = \max(0, e_P - e_G)$
+    \item Dodajemy $\Delta$ kopii krawędzi $(u', v')$ do listy brakujących krawędzi
+\end{itemize}
+
+Wynik zapisujemy w macierzy $\text{missingEdgesMatrix}[i][j]$ jako listę brakujących krawędzi dla permutacji $i$ i kombinacji $j$.
+
+\begin{itemize}
+    \item \textit{Złożoność pojedynczego obliczenia:} $O(k^2)$
+    \item \textit{Całkowita złożoność:} $O\left(\binom{n}{k} \times k! \times k^2\right)$
+    \item \textit{Pamięć:} $O\left(\binom{n}{k} \times k! \times k^2\right)$ w najgorszym przypadku
+\end{itemize}
+
+\textbf{Faza 2: Znajdowanie minimalnego rozszerzenia dla m kopii}
+
+\noindent\textbf{Krok 4: Generowanie m-kombinacji osadzeń}
+
+Generujemy wszystkie możliwe sposoby wyboru $m$ różnych kombinacji wierzchołków spośród $N = \binom{n}{k}$ dostępnych kombinacji. Każda taka $m$-kombinacja reprezentuje wybór $m$ rozłącznych wierzchołkowo podzbiorów dla $m$ kopii grafu $P$.
+
+\begin{itemize}
+    \item \textit{Liczba $m$-kombinacji:} $\binom{\binom{n}{k}}{m}$
+    \item \textit{Złożoność:} $O\left(\binom{\binom{n}{k}}{m} \times m\right)$
+\end{itemize}
+
+\noindent\textbf{Krok 5: Generowanie m-krotek permutacji}
+
+Dla każdej $m$-kombinacji podzbiorów, generujemy wszystkie możliwe $m$-krotki permutacji. Każda $m$-krotka $(i_1, i_2, \ldots, i_m)$ określa, jaką permutację stosujemy dla każdej z $m$ kopii.
+
+\begin{itemize}
+    \item \textit{Liczba $m$-krotek:} $(k!)^m$
+    \item \textit{Implementacja:} Funkcja \texttt{productSequences()} generuje produkt kartezjański
+    \item \textit{Złożoność:} $O((k!)^m \times m)$
+\end{itemize}
+
+\noindent\textbf{Krok 6: Obliczanie unii zbiorów krawędzi}
+
+Dla każdej konfiguracji ($m$-kombinacja podzbiorów, $m$-krotka permutacji) obliczamy minimalny zbiór krawędzi potrzebny do stworzenia $m$ kopii grafu $P$.
+
+Kluczowa obserwacja: jeśli wielokrotne kopie wymagają tej samej krawędzi $(u, v)$ z krotnościami $k_1, k_2, \ldots, k_m$, wystarczy dodać $\max(k_1, k_2, \ldots, k_m)$ kopii tej krawędzi, ponieważ krawędzie mogą być współdzielone między kopiami.
+
+Algorytm:
+\begin{enumerate}
+    \item Inicjalizujemy mapę częstości: \texttt{edgeFrequencyMap = \{\}}
+    \item Dla każdej z $m$ kopii ($t = 1, \ldots, m$):
+    \begin{enumerate}
+        \item Pobieramy brakujące krawędzie dla kopii $t$
+        \item Tworzymy lokalną mapę częstości krawędzi dla tej kopii
+        \item Aktualizujemy globalną mapę: dla każdej krawędzi $e$, ustawiamy \\
+        \texttt{edgeFrequencyMap[e] = max(edgeFrequencyMap[e], localFrequency[e])}
+    \end{enumerate}
+    \item Konwertujemy mapę częstości na listę krawędzi
+    \item Jeśli rozmiar listy jest mniejszy niż dotychczasowe minimum, aktualizujemy rozwiązanie
+\end{enumerate}
+
+\begin{itemize}
+    \item \textit{Złożoność:} $O\left(\binom{\binom{n}{k}}{m} \times (k!)^m \times m \times k^2\right)$
+\end{itemize}
+
+\subsubsection{Pseudokod algorytmu}
+\label{subsubsec:pseudokod}
+
+\begin{algorithm}[H]
+\caption{MinimalGraphExtension(G, P, m)}
+\label{alg:minimal_extension}
+\begin{algorithmic}[1]
+\Require $G = (V_G, E_G)$ - multigraf "duży", $|V_G| = n$
+\Require $P = (V_P, E_P)$ - multigraf "mały", $|V_P| = k$
+\Require $m$ - liczba wymaganych kopii P
+\Ensure Lista krawędzi do dodania do $G$
+\State \textit{// Faza 1: Generowanie osadzeń}
+\State $combinations \gets \text{GenerateCombinations}(V_G, k)$
+\State $indexToSubset \gets \text{IndexMap}(combinations)$
+\State $permutations \gets \text{GeneratePermutations}(V_P)$
+\State $indexToPermutation \gets \text{IndexMap}(permutations)$
+\State
+\State $missingEdgesMatrix \gets \text{Array}[|indexToPermutation|][|indexToSubset|]$
+\State
+\For{$i \gets 0$ \textbf{to} $|indexToPermutation| - 1$}
+    \For{$j \gets 0$ \textbf{to} $|indexToSubset| - 1$}
+        \State $\pi \gets indexToPermutation[i]$
+        \State $C \gets indexToSubset[j]$
+        \State $missingEdgesMatrix[i][j] \gets [\,]$
+        \For{$u \gets 0$ \textbf{to} $k-1$}
+            \For{$v \gets 0$ \textbf{to} $k-1$}
+                \State $u' \gets C[\pi[u]]$
+                \State $v' \gets C[\pi[v]]$
+                \State $e_P \gets A_P[\pi[u]][\pi[v]]$
+                \State $e_G \gets A_G[u'][v']$
+                \State $\Delta \gets \max(0, e_P - e_G)$
+                \For{$t \gets 0$ \textbf{to} $\Delta - 1$}
+                    \State $missingEdgesMatrix[i][j].\text{append}((u', v'))$
+                \EndFor
+            \EndFor
+        \EndFor
+    \EndFor
+\EndFor
+\State
+\State \textit{// Faza 2: Znajdowanie minimalnego rozszerzenia}
+\State $mCombinations \gets \text{GenerateCombinations}(indexToSubset.keys, m)$
+\State $minimalEdges \gets \text{null}$
+\State $minimalSize \gets \infty$
+\State
+\For{\textbf{each} $\{j_1, \ldots, j_m\}$ \textbf{in} $mCombinations$}
+    \For{\textbf{each} $(i_1, \ldots, i_m)$ \textbf{in} $\text{ProductSeq}(indexToPermutation.keys, m)$}
+        \State $edgeFreqMap \gets \{\}$
+        \For{$t \gets 0$ \textbf{to} $m-1$}
+            \State $missingEdges \gets missingEdgesMatrix[i_t][j_t]$
+            \State $localFreq \gets \{\}$
+            \For{\textbf{each} $e$ \textbf{in} $missingEdges$}
+                \State $localFreq[e] \gets localFreq[e] + 1$
+            \EndFor
+            \For{\textbf{each} $(e, freq)$ \textbf{in} $localFreq$}
+                \State $edgeFreqMap[e] \gets \max(edgeFreqMap[e], freq)$
+            \EndFor
+        \EndFor
+        \State $addedEdges \gets [\,]$
+        \For{\textbf{each} $(e, freq)$ \textbf{in} $edgeFreqMap$}
+            \For{$t \gets 0$ \textbf{to} $freq - 1$}
+                \State $addedEdges.\text{append}(e)$
+            \EndFor
+        \EndFor
+        \If{$|addedEdges| < minimalSize$}
+            \State $minimalSize \gets |addedEdges|$
+            \State $minimalEdges \gets addedEdges$
+        \EndIf
+    \EndFor
+\EndFor
+\State
+\State \Return $minimalEdges$
+\end{algorithmic}
+\end{algorithm}
+
+\subsection{Dowód poprawności algorytmu}
+\label{subsec:dowod_poprawnosci}
+
+\begin{theorem}[Poprawność algorytmu MinimalGraphExtension]
+\label{thm:poprawnosc}
+Algorytm MinimalGraphExtension zwraca minimalną listę krawędzi do dodania do $G$, aby zawierał $m$ rozłącznych wierzchołkowo kopii $P$.
+\end{theorem}
+
+\begin{proof}
+Dowód podzielimy na trzy części: kompletność, poprawność i minimalność.
+
+\textbf{Część 1: Kompletność (algorytm znajduje rozwiązanie, jeśli istnieje)}
+
+Załóżmy, że istnieje rozszerzenie $G'$ grafu $G$ zawierające $m$ rozłącznych wierzchołkowo kopii $P$, osiągnięte przez dodanie zbioru krawędzi $E_{add}$.
+
+\begin{enumerate}
+    \item Dla każdej z $m$ kopii $P$ w $G'$ istnieje:
+    \begin{itemize}
+        \item $k$-kombinacja wierzchołków $C_t \subseteq V_G$ ($t = 1, \ldots, m$)
+        \item Permutacja $\pi_t: V_P \to V_P$
+        \item Takie że podgraf $G'$ indukowany przez $C_t$ z odpowiednim mapowaniem jest izomorficzny z $P$
+    \end{itemize}
+
+    \item Kombinacje $C_t$ są rozłączne ($C_i \cap C_j = \emptyset$ dla $i \neq j$), ponieważ kopie są rozłączne wierzchołkowo
+
+    \item Algorytm generuje wszystkie możliwe $m$-kombinacje $k$-podzbiorów (linia 30)
+
+    \item Dla każdej $m$-kombinacji, algorytm generuje wszystkie możliwe $m$-krotki permutacji (linia 31)
+
+    \item Zatem algorytm rozważy kombinację $\{C_1, \ldots, C_m\}$ i krotkę permutacji $(\pi_1, \ldots, \pi_m)$ odpowiadającą rzeczywistemu rozwiązaniu
+
+    \item Dla tej kombinacji i krotki permutacji, algorytm obliczy dokładnie te same krawędzie, które są w $E_{add}$ (linie 33-48)
+\end{enumerate}
+
+\textbf{Część 2: Poprawność (dodane krawędzie są wystarczające)}
+
+Dla dowolnej $m$-kombinacji podzbiorów i $m$-krotki permutacji rozważanej przez algorytm:
+
+\begin{enumerate}
+    \item Dla każdej z $m$ kopii (linie 33-42):
+    \begin{itemize}
+        \item Algorytm oblicza brakujące krawędzie zapisane wcześniej w $missingEdgesMatrix$
+        \item Te krawędzie są dokładnie tymi, których brakuje do stworzenia izomorfizmu (z Fazy 1)
+    \end{itemize}
+
+    \item Operacja maksimum na krotnościach (linia 41) zapewnia:
+    \begin{itemize}
+        \item Jeśli wielokrotne kopie potrzebują tej samej krawędzi $(u,v)$ z krotnościami $k_1, k_2, \ldots$, dodajemy $\max(k_1, k_2, \ldots)$ kopii
+        \item To jest \textit{wystarczające}, bo krawędzie mogą być współdzielone między kopiami
+        \item To jest \textit{konieczne}, bo każda kopia wymaga odpowiedniej krotności
+    \end{itemize}
+
+    \item Po dodaniu krawędzi z $addedEdges$ do $G$:
+    \begin{itemize}
+        \item Każda z $m$ kopii ma wystarczającą liczbę krawędzi między każdą parą wierzchołków
+        \item Każda kopia jest izomorficzna z $P$
+    \end{itemize}
+\end{enumerate}
+
+\textbf{Część 3: Minimalność (algorytm znajduje minimum)}
+
+\begin{enumerate}
+    \item Algorytm przeszukuje wszystkie możliwe sposoby osadzenia $m$ kopii $P$ w $G$ (linie 30-31)
+
+    \item Dla każdego sposobu oblicza minimalną liczbę krawędzi potrzebnych do realizacji tego osadzenia (linie 33-48)
+
+    \item Wybiera osadzenie wymagające najmniejszej liczby krawędzi (linie 49-52)
+
+    \item Nie istnieje sposób osadzenia $m$ kopii $P$ w $G$ wymagający mniej krawędzi, bo wszystkie sposoby zostały rozważone
+\end{enumerate}
+
+Zatem algorytm jest poprawny - zwraca minimalną liczbę krawędzi wystarczających do stworzenia $m$ rozłącznych wierzchołkowo kopii $P$ w $G$.
+\end{proof}
+
+\subsection{Analiza złożoności obliczeniowej}
+\label{subsec:zlozonosc_obliczeniowa}
+
+\subsubsection{Złożoność czasowa}
+\label{subsubsec:zlozonosc_czasowa}
+
+Oznaczmy:
+\begin{itemize}
+    \item $n = |V_G|$ - liczba wierzchołków dużego grafu $G$
+    \item $k = |V_P|$ - liczba wierzchołków małego grafu $P$
+    \item $m$ - liczba wymaganych kopii $P$ w $G$
+\end{itemize}
+
+\textbf{Rozbicie na fazy:}
+
+\begin{enumerate}
+    \item \textbf{Faza 1a - Generowanie kombinacji:} $O\left(\binom{n}{k} \times k\right)$
+    \begin{itemize}
+        \item Liczba kombinacji: $\binom{n}{k}$
+        \item Koszt generowania jednej kombinacji: $O(k)$
+    \end{itemize}
+
+    \item \textbf{Faza 1b - Generowanie permutacji:} $O(k! \times k)$
+    \begin{itemize}
+        \item Liczba permutacji: $k!$
+        \item Koszt generowania jednej permutacji: $O(k)$
+    \end{itemize}
+
+    \item \textbf{Faza 1c - Obliczanie missingEdgesMatrix:} $O\left(\binom{n}{k} \times k! \times k^2\right)$
+    \begin{itemize}
+        \item Dla każdej z $\binom{n}{k}$ kombinacji
+        \item Dla każdej z $k!$ permutacji
+        \item Porównanie $k^2$ par krawędzi
+    \end{itemize}
+
+    \item \textbf{Faza 2a - Generowanie m-kombinacji osadzeń:} $O\left(\binom{\binom{n}{k}}{m} \times m\right)$
+    \begin{itemize}
+        \item Liczba $m$-kombinacji: $\binom{\binom{n}{k}}{m}$
+    \end{itemize}
+
+    \item \textbf{Faza 2b - Główna pętla przeszukiwania:}
+    \[
+    O\left(\binom{\binom{n}{k}}{m} \times (k!)^m \times m \times k^2\right)
+    \]
+    \begin{itemize}
+        \item Dla każdej $m$-kombinacji podzbiorów: $\binom{\binom{n}{k}}{m}$
+        \item Dla każdej $m$-krotki permutacji: $(k!)^m$
+        \item Dla każdej z $m$ kopii: $m$
+        \item Obliczanie częstości krawędzi: $O(k^2)$ dla jednej kopii
+    \end{itemize}
+\end{enumerate}
+
+\textbf{Całkowita złożoność czasowa:}
+\[
+T(n, k, m) = O\left(\binom{n}{k} \times k! \times k^2\right) + O\left(\binom{\binom{n}{k}}{m} \times (k!)^m \times m \times k^2\right)
+\]
+
+\textbf{Dominujący składnik} dla małych $m$ (gdy $m \ll \binom{n}{k}$):
+\[
+T(n, k, m) = O\left(\binom{n}{k} \times k! \times k^2\right)
+\]
+
+\textbf{Dominujący składnik} dla większych $m$:
+\[
+T(n, k, m) = O\left(\binom{\binom{n}{k}}{m} \times (k!)^m \times m \times k^2\right)
+\]
+
+\textbf{Oszacowania asymptotyczne:}
+\begin{itemize}
+    \item $\binom{n}{k} = O\left(\frac{n^k}{k!}\right)$ - wielomianowe względem $n$ dla stałego $k$
+    \item $k!$ - silniowe względem $k$
+    \item $\binom{\binom{n}{k}}{m} \approx O((n^k)^m)$ dla dużych $n$
+    \item $(k!)^m$ - wykładnicze względem $m$
+\end{itemize}
+
+\textbf{Przykład obliczeniowy:}
+
+Dla $k = 3$, $n = 10$, $m = 2$:
+\begin{itemize}
+    \item $\binom{10}{3} = 120$
+    \item $3! = 6$
+    \item $\binom{120}{2} = 7140$
+    \item $(3!)^2 = 36$
+    \item Oszacowanie operacji Fazy 1: $120 \times 6 \times 9 \approx 6{,}480$
+    \item Oszacowanie operacji Fazy 2: $7140 \times 36 \times 2 \times 9 \approx 4{,}630{,}080$
+    \item Łącznie: $\approx 4{,}6$ miliona operacji
+\end{itemize}
+
+\subsubsection{Złożoność pamięciowa}
+\label{subsubsec:zlozonosc_pamieciowa}
+
+\textbf{Główne struktury danych:}
+
+\begin{enumerate}
+    \item \textbf{missingEdgesMatrix:} $O\left(\binom{n}{k} \times k! \times k^2\right)$
+    \begin{itemize}
+        \item Tablica 2D o wymiarach $k! \times \binom{n}{k}$
+        \item Każda komórka zawiera listę brakujących krawędzi (w najgorszym $O(k^2)$ krawędzi)
+    \end{itemize}
+
+    \item \textbf{indexToSubset:} $O\left(\binom{n}{k} \times k\right)$
+    \begin{itemize}
+        \item Przechowuje $\binom{n}{k}$ kombinacji, każda długości $k$
+    \end{itemize}
+
+    \item \textbf{indexToPermutation:} $O(k! \times k)$
+    \begin{itemize}
+        \item Przechowuje $k!$ permutacji, każda długości $k$
+    \end{itemize}
+
+    \item \textbf{Zmienne tymczasowe w głównej pętli:} $O(k^2)$
+\end{enumerate}
+
+\textbf{Całkowita złożoność pamięciowa:}
+\[
+S(n, k, m) = O\left(\binom{n}{k} \times k! \times k^2\right)
+\]
+
+\textbf{Uwaga:} Złożoność pamięciowa jest niezależna od $m$ (nie przechowujemy wszystkich $m$-krotek, generujemy je leniwie).
+
+\subsubsection{Charakterystyka algorytmu}
+\label{subsubsec:charakterystyka}
+
+\textbf{Klasa złożoności:}
+\begin{itemize}
+    \item Problem jest \textbf{NP-trudny} (redukcja z problemu izomorfizmu podgrafów)
+    \item Algorytm dokładny ma złożoność \textbf{wykładniczą} względem $k$ (ze względu na $k!$)
+    \item Algorytm ma złożoność \textbf{wielomianowo-wykładniczą} względem $m$
+\end{itemize}
+
+\textbf{Praktyczne ograniczenia:}
+\begin{itemize}
+    \item Algorytm jest wykonalny dla małych wartości $k$ ($k \leq 6-7$) i $n \leq 20$
+    \item Dla większych wartości $k$ lub $n$ algorytm staje się niepraktyczny
+    \item Wartość $m$ ma mniejszy wpływ na czas wykonania niż $k$ (dla małych $m$)
+\end{itemize}
+
+\subsection{Przykład działania algorytmu}
+\label{subsec:przyklad_dzialania}
+
+\textbf{Dane wejściowe:}
+
+Graf $G$ z 8 wierzchołkami (macierz sąsiedztwa $8 \times 8$):
+\[
+A_G = \begin{pmatrix}
+2 & 1 & 1 & 0 & 0 & 0 & 0 & 1 \\
+1 & 2 & 1 & 0 & 0 & 0 & 0 & 0 \\
+1 & 1 & 2 & 1 & 0 & 0 & 0 & 0 \\
+0 & 0 & 1 & 0 & 1 & 0 & 0 & 0 \\
+0 & 0 & 0 & 1 & 0 & 1 & 0 & 0 \\
+0 & 0 & 0 & 0 & 1 & 0 & 1 & 0 \\
+0 & 0 & 0 & 0 & 0 & 1 & 0 & 1 \\
+1 & 0 & 0 & 0 & 0 & 0 & 1 & 0
+\end{pmatrix}
+\]
+
+Graf $P$ z 3 wierzchołkami (macierz sąsiedztwa $3 \times 3$):
+\[
+A_P = \begin{pmatrix}
+2 & 1 & 1 \\
+1 & 2 & 1 \\
+1 & 1 & 2
+\end{pmatrix}
+\]
+
+Liczba wymaganych kopii: $m = 2$
+
+\textbf{Faza 1: Generowanie osadzeń}
+
+\textbf{Krok 1:} Generowanie 3-kombinacji z 8 wierzchołków
+\begin{itemize}
+    \item Liczba kombinacji: $\binom{8}{3} = 56$
+    \item Przykłady: $C_0 = \{0, 1, 2\}$, $C_1 = \{0, 1, 3\}$, \ldots, $C_{55} = \{5, 6, 7\}$
+\end{itemize}
+
+\textbf{Krok 2:} Generowanie permutacji wierzchołków $P$
+\begin{itemize}
+    \item Liczba permutacji: $3! = 6$
+    \item Wszystkie permutacje: $\pi_0 = [0, 1, 2]$, $\pi_1 = [0, 2, 1]$, $\pi_2 = [1, 0, 2]$, \\
+    $\pi_3 = [1, 2, 0]$, $\pi_4 = [2, 0, 1]$, $\pi_5 = [2, 1, 0]$
+\end{itemize}
+
+\textbf{Krok 3:} Obliczanie brakujących krawędzi
+
+Dla $C_0 = \{0, 1, 2\}$ i $\pi_0 = [0, 1, 2]$:
+\begin{itemize}
+    \item Podgraf $G$ indukowany przez $\{0, 1, 2\}$:
+    \[
+    \begin{pmatrix}
+    2 & 1 & 1 \\
+    1 & 2 & 1 \\
+    1 & 1 & 2
+    \end{pmatrix}
+    \]
+    \item $P$ z permutacją $\pi_0$ (bez zmian):
+    \[
+    \begin{pmatrix}
+    2 & 1 & 1 \\
+    1 & 2 & 1 \\
+    1 & 1 & 2
+    \end{pmatrix}
+    \]
+    \item Brakujące krawędzie: $\text{missingEdgesMatrix}[0][0] = [\,]$ (puste - grafy identyczne!)
+\end{itemize}
+
+Dla $C_{55} = \{5, 6, 7\}$ i $\pi_0 = [0, 1, 2]$:
+\begin{itemize}
+    \item Podgraf $G$ indukowany przez $\{5, 6, 7\}$:
+    \[
+    \begin{pmatrix}
+    0 & 1 & 0 \\
+    1 & 0 & 1 \\
+    0 & 1 & 0
+    \end{pmatrix}
+    \]
+    \item Brakujące krawędzie: $\text{missingEdgesMatrix}[0][55] = [(5,5), (5,5), (5,7), (6,6), (6,6), (7,5), (7,7), (7,7)]$
+\end{itemize}
+
+\textbf{Faza 2: Znajdowanie 2 kopii}
+
+\textbf{Krok 4-6:} Rozważamy 2-kombinację $\{C_0, C_{55}\} = \{\{0,1,2\}, \{5,6,7\}\}$
+
+Te kombinacje są rozłączne wierzchołkowo $\checkmark$
+
+Dla 2-krotki permutacji $(\pi_0, \pi_0)$:
+\begin{itemize}
+    \item Kopia 1: $\text{missingEdgesMatrix}[0][0] = [\,]$ (0 krawędzi)
+    \item Kopia 2: $\text{missingEdgesMatrix}[0][55] = [\ldots]$ (8 krawędzi)
+    \item $\text{edgeFrequencyMap}$ zawiera 8 krawędzi z Kopii 2
+    \item Rozmiar listy: 8
+\end{itemize}
+
+Po przeszukaniu wszystkich konfiguracji, algorytm może znaleźć lepsze rozwiązanie (np. dwie inne kombinacje wymagające łącznie mniej krawędzi).
+
+\textbf{Wynik przykładowy:}
+\begin{verbatim}
+Minimalna liczba krawędzi do dodania: 0 (lub inna wartość)
+Dodane krawędzie: []
+Osadzenie kopii 1: wierzchołki {0,1,2}
+Osadzenie kopii 2: wierzchołki {5,6,7} (po ewentualnym dodaniu krawędzi)
+\end{verbatim}
+
+\subsection{Optymalizacje i możliwe ulepszenia}
+\label{subsec:optymalizacje}
+
+\subsubsection{Optymalizacje implementacyjne}
+\label{subsubsec:optymalizacje_impl}
+
+\begin{enumerate}
+    \item \textbf{Wczesne przerywanie (pruning)}
+    \begin{itemize}
+        \item Jeśli podczas budowania $addedEdgesList$ rozmiar przekroczy dotychczasowe minimum, przerwij obliczenia dla tej konfiguracji
+        \item Oszczędność czasu w pesymistycznych przypadkach
+    \end{itemize}
+
+    \item \textbf{Wykorzystanie symetrii grafu}
+    \begin{itemize}
+        \item Jeśli graf $P$ ma symetrie (automorfizmy), wiele permutacji da identyczne wyniki
+        \item Można zredukować liczbę rozważanych permutacji poprzez grupowanie klas równoważności
+    \end{itemize}
+
+    \item \textbf{Sortowanie kombinacji według "obiecujących" cech}
+    \begin{itemize}
+        \item Najpierw rozważaj kombinacje, które już mają wiele krawędzi odpowiadających $P$
+        \item Może prowadzić do znalezienia dobrego rozwiązania wcześniej
+    \end{itemize}
+
+    \item \textbf{Przetwarzanie równoległe}
+    \begin{itemize}
+        \item Obliczenia dla różnych $m$-kombinacji są niezależne
+        \item Możliwość równoległego przetwarzania na wielu rdzeniach/maszynach
+    \end{itemize}
+\end{enumerate}
+
+\subsubsection{Heurystyki i algorytmy aproksymacyjne}
+\label{subsubsec:heurystyki}
+
+\textbf{1. Algorytm zachłanny (Greedy)}
+
+\textit{Idea:} Zamiast rozważać wszystkie możliwe $m$-kombinacje osadzeń, wybieraj zachłannie następne najlepsze osadzenie.
+
+\textit{Algorytm:}
+\begin{itemize}
+    \item Dla pierwszej kopii $P$: znajdź osadzenie wymagające najmniej krawędzi
+    \item Dodaj te krawędzie do $G$
+    \item Dla kolejnych kopii: znajdź osadzenie wymagające najmniej nowych krawędzi (biorąc pod uwagę już dodane)
+    \item Powtórz $m$ razy
+\end{itemize}
+
+\textit{Złożoność:} $O\left(m \times \binom{n}{k} \times k! \times k^2\right)$
+
+\textit{Jakość:} Nie gwarantuje optymalności, ale może dać dobre przybliżenie w krótszym czasie.
+
+\textbf{2. Algorytm genetyczny}
+
+\textit{Idea:} Ewolucyjne poszukiwanie dobrego rozwiązania.
+
+\textit{Komponenty:}
+\begin{itemize}
+    \item \textbf{Populacja:} Zbiór kandydatów rozwiązań ($m$-krotki osadzeń)
+    \item \textbf{Funkcja przystosowania:} Liczba krawędzi do dodania (minimalizowana)
+    \item \textbf{Operatory:} Krzyżowanie (wymiana osadzeń między rozwiązaniami), mutacja (losowa zmiana osadzenia)
+    \item \textbf{Selekcja:} Wybór najlepszych rozwiązań do następnego pokolenia
+\end{itemize}
+
+\textit{Zalety:} Możliwość znalezienia dobrych rozwiązań dla dużych instancji.
+
+\textit{Wady:} Brak gwarancji optymalności, wymaga tuningu parametrów.
+
+\textbf{3. Symulowane wyżarzanie (Simulated Annealing)}
+
+\textit{Idea:} Iteracyjne ulepszanie rozwiązania z możliwością akceptacji gorszych rozwiązań.
+
+\textit{Algorytm:}
+\begin{itemize}
+    \item Start: losowa $m$-krotka osadzeń
+    \item Iteracyjnie: modyfikuj losowo jedno osadzenie
+    \item Akceptuj jeśli poprawia rozwiązanie lub z prawdopodobieństwem zależnym od "temperatury"
+    \item "Temperatura" maleje z czasem, redukując akceptację gorszych rozwiązań
+\end{itemize}
+
+\textit{Zalety:} Pozwala na wyjście z lokalnych minimów.
+
+\textbf{4. Programowanie całkowitoliczbowe (ILP)}
+
+\textit{Idea:} Sformułuj problem jako program całkowitoliczbowy.
+
+\textit{Zmienne:}
+\begin{itemize}
+    \item $x_{ij} \in \{0, 1\}$ - czy osadzenie $i$ jest wybrane dla kopii $j$
+    \item $y_e \in \mathbb{N}_0$ - liczba kopii krawędzi $e$ do dodania
+\end{itemize}
+
+\textit{Ograniczenia:}
+\begin{itemize}
+    \item Każda kopia musi mieć dokładnie jedno osadzenie: $\sum_i x_{ij} = 1$ dla każdego $j$
+    \item Osadzenia muszą być rozłączne wierzchołkowo
+    \item Dla każdej krawędzi $e$: $y_e \geq \max_j \{\Delta_{ij}(e) \cdot x_{ij}\}$ gdzie $\Delta_{ij}(e)$ to krotność $e$ w brakujących krawędziach osadzenia $i$ dla kopii $j$
+\end{itemize}
+
+\textit{Cel:} Minimalizuj $\sum_e y_e$
+
+\textit{Zalety:} Optymalne rozwiązanie (jeśli solver zakończy się w rozsądnym czasie).
+
+\textit{Wady:} Może być wolne dla dużych instancji.
+
+\subsection{Podsumowanie}
+\label{subsec:podsumowanie_m}
+
+W niniejszej sekcji przedstawiono kompleksowe podejście do problemu minimalnego rozszerzenia multigrafu zawierającego $m$ kopii podgrafu wzorcowego:
+
+\begin{itemize}
+    \item \textbf{Sformułowano problem} i uzasadniono jego praktyczne znaczenie
+    \item \textbf{Zdefiniowano formalnie} kluczowe pojęcia: rozszerzenie, koszt rozszerzenia, osadzenie k-wierzchołkowe, brakujące krawędzie, minimalne rozszerzenie zawierające $m$ kopii
+    \item \textbf{Opracowano algorytm dokładny} oparty na pełnym przeszukiwaniu przestrzeni rozwiązań
+    \item \textbf{Udowodniono poprawność} algorytmu (kompletność, poprawność, minimalność)
+    \item \textbf{Przeprowadzono szczegółową analizę złożoności}:
+    \begin{itemize}
+        \item Złożoność czasowa: $O\left(\binom{n}{k} \times k! \times k^2 + \binom{\binom{n}{k}}{m} \times (k!)^m \times m \times k^2\right)$
+        \item Złożoność pamięciowa: $O\left(\binom{n}{k} \times k! \times k^2\right)$
+        \item Problem jest NP-trudny
+    \end{itemize}
+    \item \textbf{Zaprezentowano przykład działania} algorytmu na konkretnych danych
+    \item \textbf{Zaproponowano optymalizacje} implementacyjne i algorytmy aproksymacyjne (zachłanny, genetyczny, simulated annealing, ILP)
+\end{itemize}
+
+Algorytm dokładny jest praktyczny dla małych wartości $k$ ($k \leq 6-7$) i $n \leq 20$. Dla większych instancji zaleca się stosowanie algorytmów aproksymacyjnych lub heurystyk.
+
+
+% ---------------- MINIMALNE ROZSZERZENIE ZAWIERAJĄCE M KOPII ---------------- %
+
 
 
 
